--- a/nl/algemene-voorwaarden/index.htm
+++ b/nl/algemene-voorwaarden/index.htm
@@ -2976,56 +2976,56 @@
                   {
                     "language": { "code": "nl", "name": "Nederlands" },
                     "page": {
-                      "url": "/nl/algemene-voorwaarden/",
+                      "url": "/nl/algemene-voorwaarden/index.htm",
                       "title": "Algemene voorwaarden"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Engels" },
                     "page": {
-                      "url": "/en/terms-and-conditions/",
+                      "url": "/en/terms-and-conditions/index.htm",
                       "title": "Terms \u0026 Conditions"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Duits" },
                     "page": {
-                      "url": "/de/geschaftsbedingungen/",
+                      "url": "/de/geschaftsbedingungen/index.htm",
                       "title": "Geschäftsbedingungen"
                     }
                   },
                   {
                     "language": { "code": "fr", "name": "Frans" },
                     "page": {
-                      "url": "/fr/conditions-generales/",
+                      "url": "/fr/conditions-generales/index.htm",
                       "title": "Conditions générales"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Spaans" },
                     "page": {
-                      "url": "/es/terminos-y-condiciones/",
+                      "url": "/es/terminos-y-condiciones/index.htm",
                       "title": "Términos y condiciones"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italiaans" },
                     "page": {
-                      "url": "/it/termini-e-condizioni/",
+                      "url": "/it/termini-e-condizioni/index.htm",
                       "title": "Termini e condizioni"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portugees" },
                     "page": {
-                      "url": "/pt/termos-e-condicoes/",
+                      "url": "/pt/termos-e-condicoes/index.htm",
                       "title": "Termos e Condições"
                     }
                   }
                 ],
                 "show_info_bar": true,
                 "info_bar_message": "Discover our new Heineken® Flagship Cruise",
-                "info_bar_url": "/nl/ontdek-onze-tours/heineken-flagship-cruise-nl/",
+                "info_bar_url": "/nl/ontdek-onze-tours/heineken-flagship-cruise-nl/index.htm",
                 "info_bar_schedule": {
                   "sunday": {
                     "open": "10:30",
@@ -3102,55 +3102,55 @@
             "menu": [
               {
                 "title": "Ontdek onze tours",
-                "url": "/nl/ontdek-onze-tours/",
+                "url": "/nl/ontdek-onze-tours/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Dakterras",
-                    "url": "/nl/ontdek-onze-tours/heineken-tour-dakterras/",
+                    "url": "/nl/ontdek-onze-tours/heineken-tour-dakterras/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/nl/ontdek-onze-tours/heineken-tour/",
+                    "url": "/nl/ontdek-onze-tours/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/nl/ontdek-onze-tours/heineken-flagship-cruise-nl/",
+                    "url": "/nl/ontdek-onze-tours/heineken-flagship-cruise-nl/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/nl/ontdek-onze-tours/rock-the-city/",
+                    "url": "/nl/ontdek-onze-tours/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/nl/ontdek-onze-tours/vip-tour/",
+                    "url": "/nl/ontdek-onze-tours/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/nl/ontdek-onze-tours/the-perfect-match/",
+                    "url": "/nl/ontdek-onze-tours/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Evenementen",
-                "url": "/nl/vergaderingen-en-evenementen/",
+                "url": "/nl/vergaderingen-en-evenementen/index.htm",
                 "children": [
                   {
                     "title": "Ontdek onze ruimtes",
-                    "url": "/nl/vergaderingen-en-evenementen/ontdek-onze-ruimtes/"
+                    "url": "/nl/vergaderingen-en-evenementen/ontdek-onze-ruimtes/index.htm"
                   },
                   {
                     "title": "Onze diensten",
-                    "url": "/nl/vergaderingen-en-evenementen/onze-diensten/"
+                    "url": "/nl/vergaderingen-en-evenementen/onze-diensten/index.htm"
                   },
                   {
                     "title": "Neem contact met ons op",
-                    "url": "/nl/vergaderingen-en-evenementen/neem-contact-op/"
+                    "url": "/nl/vergaderingen-en-evenementen/neem-contact-op/index.htm"
                   }
                 ]
               },
@@ -3158,70 +3158,70 @@
                 "title": "Service en contact",
                 "url": "/nl/service-en-contact/"
               },
-              { "title": "Cadeaubon", "url": "/nl/cadeaubon/" },
+              { "title": "Cadeaubon", "url": "/nl/cadeaubon/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/nl/heineken-store-nl/"
+                "url": "/nl/heineken-store-nl/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "Over de Experience",
-                  "url": "/nl/over-de-experience/",
+                  "url": "/nl/over-de-experience/index.htm",
                   "new": false
                 },
                 {
                   "title": "Ontdek onze tours",
-                  "url": "/nl/ontdek-onze-tours/",
+                  "url": "/nl/ontdek-onze-tours/index.htm",
                   "new": false
                 },
                 {
                   "title": "Veelgestelde vragen",
-                  "url": "/nl/veelgestelde-vragen/",
+                  "url": "/nl/veelgestelde-vragen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Service en contact",
-                  "url": "/nl/service-en-contact/",
+                  "url": "/nl/service-en-contact/index.htm",
                   "new": false
                 },
                 {
                   "title": "Kinderen en minderjarigen",
-                  "url": "/nl/kinderen-en-minderjarigen/",
+                  "url": "/nl/kinderen-en-minderjarigen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Bezoek verplaatsen en terugbetalingen",
-                  "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/",
+                  "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/index.htm",
                   "new": false
                 },
-                { "title": "Cadeaubon", "url": "/nl/cadeaubon/", "new": false },
+                { "title": "Cadeaubon", "url": "/nl/cadeaubon/index.htm", "new": false },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/nl/heineken-store-nl/",
+                  "url": "/nl/heineken-store-nl/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Evenementen",
-                  "url": "/nl/vergaderingen-en-evenementen/",
+                  "url": "/nl/vergaderingen-en-evenementen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Ontdek onze ruimtes",
-                  "url": "/nl/vergaderingen-en-evenementen/ontdek-onze-ruimtes/",
+                  "url": "/nl/vergaderingen-en-evenementen/ontdek-onze-ruimtes/index.htm",
                   "new": false
                 },
                 {
                   "title": "Best 'Dam Bar",
-                  "url": "/nl/vergaderingen-en-evenementen/best-dam-bar-nl/",
+                  "url": "/nl/vergaderingen-en-evenementen/best-dam-bar-nl/index.htm",
                   "new": false
                 },
                 {
                   "title": "Onze diensten",
-                  "url": "/nl/vergaderingen-en-evenementen/onze-diensten/",
+                  "url": "/nl/vergaderingen-en-evenementen/onze-diensten/index.htm",
                   "new": false
                 }
               ],
@@ -3233,27 +3233,27 @@
                 },
                 {
                   "title": "Privacybeleid",
-                  "url": "/nl/privacybeleid/",
+                  "url": "/nl/privacybeleid/index.htm",
                   "new": false
                 },
                 {
                   "title": "Cookiebeleid",
-                  "url": "/nl/cookiebeleid/",
+                  "url": "/nl/cookiebeleid/index.htm",
                   "new": false
                 },
                 {
                   "title": "Algemene voorwaarden",
-                  "url": "/nl/algemene-voorwaarden/",
+                  "url": "/nl/algemene-voorwaarden/index.htm",
                   "new": false
                 },
                 {
                   "title": "Veelgestelde vragen",
-                  "url": "/nl/veelgestelde-vragen/",
+                  "url": "/nl/veelgestelde-vragen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Huisregels",
-                  "url": "/nl/huisregels/",
+                  "url": "/nl/huisregels/index.htm",
                   "new": false
                 }
               ],
