--- a/pt/cartão-de-oferta/index.htm
+++ b/pt/cartão-de-oferta/index.htm
@@ -4648,43 +4648,43 @@
                   {
                     "language": { "code": "pt", "name": "Português" },
                     "page": {
-                      "url": "/pt/cart%C3%A3o-de-oferta/",
+                      "url": "/pt/cart%C3%A3o-de-oferta/index.htm",
                       "title": "Cartão de oferta"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Inglês" },
-                    "page": { "url": "/en/gift-card/", "title": "Gift card" }
+                    "page": { "url": "/en/gift-card/index.htm", "title": "Gift card" }
                   },
                   {
                     "language": { "code": "nl", "name": "Holandês" },
-                    "page": { "url": "/nl/cadeaubon/", "title": "Cadeaubon" }
+                    "page": { "url": "/nl/cadeaubon/index.htm", "title": "Cadeaubon" }
                   },
                   {
                     "language": { "code": "de", "name": "Alemão" },
                     "page": {
-                      "url": "/de/geschenkgutschein/",
+                      "url": "/de/geschenkgutschein/index.htm",
                       "title": "Geschenkgutschein"
                     }
                   },
                   {
                     "language": { "code": "fr", "name": "Francês" },
                     "page": {
-                      "url": "/fr/carte-cadeau/",
+                      "url": "/fr/carte-cadeau/index.htm",
                       "title": "Carte cadeau"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Espanhol" },
                     "page": {
-                      "url": "/es/tarjeta-regalo/",
+                      "url": "/es/tarjeta-regalo/index.htm",
                       "title": "Tarjeta regalo"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italiano" },
                     "page": {
-                      "url": "/it/buono-regalo/",
+                      "url": "/it/buono-regalo/index.htm",
                       "title": "Buono regalo"
                     }
                   }
@@ -4958,7 +4958,7 @@
                         "answer": "\u003cp\u003eThe Heineken Experience gift card is valid for 2 years since it was purchased.\u003c/p\u003e"
                       }
                     ],
-                    "cta_page_url": "/pt/perguntas-frequentes/"
+                    "cta_page_url": "/pt/perguntas-frequentes/index.htm"
                   },
                   "id": "a74873b3-f41d-47a0-8845-bcd7c2482162"
                 }
@@ -4971,128 +4971,128 @@
             "menu": [
               {
                 "title": "Descobre as nossas visitas",
-                "url": "/pt/descobre-as-nossas-visitas/",
+                "url": "/pt/descobre-as-nossas-visitas/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/pt/descobre-as-nossas-visitas/rock-the-city/",
+                    "url": "/pt/descobre-as-nossas-visitas/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/pt/descobre-as-nossas-visitas/vip-tour/",
+                    "url": "/pt/descobre-as-nossas-visitas/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/pt/descobre-as-nossas-visitas/the-perfect-match/",
+                    "url": "/pt/descobre-as-nossas-visitas/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Reuniões e Eventos",
-                "url": "/pt/reunioes-e-eventos/",
+                "url": "/pt/reunioes-e-eventos/index.htm",
                 "children": [
                   {
                     "title": "Descobre os nossos espaços",
-                    "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/"
+                    "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/index.htm"
                   },
                   {
                     "title": "Os nossos serviços",
-                    "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/"
+                    "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/index.htm"
                   },
                   {
                     "title": "Contacta-nos",
-                    "url": "/pt/reunioes-e-eventos/contacta-nos/"
+                    "url": "/pt/reunioes-e-eventos/contacta-nos/index.htm"
                   }
                 ]
               },
               {
                 "title": "Serviço e contacto",
-                "url": "/pt/servico-e-contacto/"
+                "url": "/pt/servico-e-contacto/index.htm"
               },
               {
                 "title": "Cartão de oferta",
-                "url": "/pt/cart%C3%A3o-de-oferta/"
+                "url": "/pt/cart%C3%A3o-de-oferta/index.htm"
               },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/pt/heineken-store-pt/"
+                "url": "/pt/heineken-store-pt/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "Sobre a Experiência",
-                  "url": "/pt/sobre-a-experiencia/",
+                  "url": "/pt/sobre-a-experiencia/index.htm",
                   "new": false
                 },
                 {
                   "title": "Descobre as nossas visitas",
-                  "url": "/pt/descobre-as-nossas-visitas/",
+                  "url": "/pt/descobre-as-nossas-visitas/index.htm",
                   "new": false
                 },
                 {
                   "title": "Perguntas frequentes",
-                  "url": "/pt/perguntas-frequentes/",
+                  "url": "/pt/perguntas-frequentes/index.htm",
                   "new": false
                 },
                 {
                   "title": "Serviço e contacto",
-                  "url": "/pt/servico-e-contacto/",
+                  "url": "/pt/servico-e-contacto/index.htm",
                   "new": false
                 },
                 {
                   "title": "Crianças e menores de idade",
-                  "url": "/pt/crian%C3%A7as-e-menores-de-idade/",
+                  "url": "/pt/crian%C3%A7as-e-menores-de-idade/index.htm",
                   "new": false
                 },
                 {
                   "title": "Reagendamento e reembolso",
-                  "url": "/pt/reagendamento-e-reembolso/",
+                  "url": "/pt/reagendamento-e-reembolso/index.htm",
                   "new": false
                 },
                 {
                   "title": "Cartão de oferta",
-                  "url": "/pt/cart%C3%A3o-de-oferta/",
+                  "url": "/pt/cart%C3%A3o-de-oferta/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/pt/heineken-store-pt/",
+                  "url": "/pt/heineken-store-pt/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Reuniões e Eventos",
-                  "url": "/pt/reunioes-e-eventos/",
+                  "url": "/pt/reunioes-e-eventos/index.htm",
                   "new": false
                 },
                 {
                   "title": "Descobre os nossos espaços",
-                  "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/",
+                  "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/index.htm",
                   "new": false
                 },
                 {
                   "title": "Os nossos serviços",
-                  "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/",
+                  "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/index.htm",
                   "new": false
                 }
               ],
@@ -5104,27 +5104,27 @@
                 },
                 {
                   "title": "Política de Privacidade",
-                  "url": "/pt/politica-de-privacidade/",
+                  "url": "/pt/politica-de-privacidade/index.htm",
                   "new": false
                 },
                 {
                   "title": "Política de Cookies",
-                  "url": "/pt/politica-de-cookies/",
+                  "url": "/pt/politica-de-cookies/index.htm",
                   "new": false
                 },
                 {
                   "title": "Termos e Condições",
-                  "url": "/pt/termos-e-condicoes/",
+                  "url": "/pt/termos-e-condicoes/index.htm",
                   "new": false
                 },
                 {
                   "title": "Perguntas frequentes",
-                  "url": "/pt/perguntas-frequentes/",
+                  "url": "/pt/perguntas-frequentes/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/pt/house-rules-pt/",
+                  "url": "/pt/house-rules-pt/index.htm",
                   "new": false
                 }
               ],
