--- a/pt/descobre-as-nossas-visitas/index.htm
+++ b/pt/descobre-as-nossas-visitas/index.htm
@@ -4253,56 +4253,56 @@
                   {
                     "language": { "code": "pt", "name": "Português" },
                     "page": {
-                      "url": "/pt/descobre-as-nossas-visitas/",
+                      "url": "/pt/descobre-as-nossas-visitas/index.htm",
                       "title": "Descobre as nossas visitas"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Inglês" },
                     "page": {
-                      "url": "/en/discover-our-tours/",
+                      "url": "/en/discover-our-tours/index.htm",
                       "title": "Discover our tours"
                     }
                   },
                   {
                     "language": { "code": "nl", "name": "Holandês" },
                     "page": {
-                      "url": "/nl/ontdek-onze-tours/",
+                      "url": "/nl/ontdek-onze-tours/index.htm",
                       "title": "Ontdek onze tours"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Alemão" },
                     "page": {
-                      "url": "/de/entdecke-unsere-touren/",
+                      "url": "/de/entdecke-unsere-touren/index.htm",
                       "title": "Entdecke unsere touren"
                     }
                   },
                   {
                     "language": { "code": "fr", "name": "Francês" },
                     "page": {
-                      "url": "/fr/decouvrir-nos-visites/",
+                      "url": "/fr/decouvrir-nos-visites/index.htm",
                       "title": "Découvrir nos visites"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Espanhol" },
                     "page": {
-                      "url": "/es/descubre-nuestros-tours/",
+                      "url": "/es/descubre-nuestros-tours/index.htm",
                       "title": "Descubre nuestros tours"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italiano" },
                     "page": {
-                      "url": "/it/scopri-i-nostri-tour/",
+                      "url": "/it/scopri-i-nostri-tour/index.htm",
                       "title": "Scopri i nostri tour"
                     }
                   }
                 ],
                 "show_info_bar": true,
                 "info_bar_message": "Discover our new Heineken® Flagship Cruise",
-                "info_bar_url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/",
+                "info_bar_url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/index.htm",
                 "info_bar_schedule": {
                   "sunday": {
                     "open": "10:30",
@@ -4407,7 +4407,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour/index.htm",
                     "tour": {
                       "price": 23,
                       "checkout_cta_label": "Reserva esta visita",
@@ -4432,7 +4432,7 @@
                         }
                       ],
                       "social_proof_label": ["Most popular one"],
-                      "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour/",
+                      "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour/index.htm",
                       "max_tickets": 60,
                       "start_locations": [],
                       "most_popular": false,
@@ -4526,7 +4526,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/index.htm",
                     "tour": {
                       "price": 27.5,
                       "checkout_cta_label": "Reserva esta visita",
@@ -4551,7 +4551,7 @@
                         }
                       ],
                       "social_proof_label": ["Best value"],
-                      "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/",
+                      "page_url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/index.htm",
                       "max_tickets": 60,
                       "start_locations": [],
                       "most_popular": false,
@@ -4645,7 +4645,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/index.htm",
                     "tour": {
                       "price": 39.5,
                       "checkout_cta_label": "Book now",
@@ -4670,7 +4670,7 @@
                         }
                       ],
                       "social_proof_label": ["New tour"],
-                      "page_url": "/en/discover-our-tours/heineken-flagship-cruise/",
+                      "page_url": "/en/discover-our-tours/heineken-flagship-cruise/index.htm",
                       "max_tickets": 30,
                       "start_locations": [],
                       "most_popular": true,
@@ -4756,7 +4756,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/vip-tour/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/vip-tour/index.htm",
                     "tour": {
                       "price": 59.5,
                       "checkout_cta_label": "Reserva esta visita",
@@ -4781,7 +4781,7 @@
                         }
                       ],
                       "social_proof_label": ["Most popular one"],
-                      "page_url": "/pt/descobre-as-nossas-visitas/vip-tour/",
+                      "page_url": "/pt/descobre-as-nossas-visitas/vip-tour/index.htm",
                       "max_tickets": 12,
                       "start_locations": [],
                       "most_popular": false,
@@ -4867,7 +4867,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/rock-the-city/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/rock-the-city/index.htm",
                     "tour": {
                       "price": 36,
                       "checkout_cta_label": "Reserva esta visita",
@@ -4892,7 +4892,7 @@
                         }
                       ],
                       "social_proof_label": ["Most popular one"],
-                      "page_url": "/pt/descobre-as-nossas-visitas/rock-the-city/",
+                      "page_url": "/pt/descobre-as-nossas-visitas/rock-the-city/index.htm",
                       "max_tickets": 50,
                       "start_locations": [],
                       "most_popular": false,
@@ -4978,7 +4978,7 @@
                   "value": {
                     "checkout_cta_label": "Reserva esta visita",
                     "detail_page_cta_label": "Mais informações",
-                    "page_url": "/pt/descobre-as-nossas-visitas/the-perfect-match/",
+                    "page_url": "/pt/descobre-as-nossas-visitas/the-perfect-match/index.htm",
                     "tour": {
                       "price": 33,
                       "checkout_cta_label": "Reserva esta visita",
@@ -4994,7 +4994,7 @@
                         }
                       ],
                       "social_proof_label": ["Most popular one"],
-                      "page_url": "/pt/descobre-as-nossas-visitas/the-perfect-match/",
+                      "page_url": "/pt/descobre-as-nossas-visitas/the-perfect-match/index.htm",
                       "max_tickets": 60,
                       "start_locations": [],
                       "most_popular": false,
@@ -5100,162 +5100,162 @@
             "menu": [
               {
                 "title": "Descobre as nossas visitas",
-                "url": "/pt/descobre-as-nossas-visitas/",
+                "url": "/pt/descobre-as-nossas-visitas/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour-rooftop-pt/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/",
+                    "url": "/pt/descobre-as-nossas-visitas/heineken-flagship-cruise-pt/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/pt/descobre-as-nossas-visitas/rock-the-city/",
+                    "url": "/pt/descobre-as-nossas-visitas/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/pt/descobre-as-nossas-visitas/vip-tour/",
+                    "url": "/pt/descobre-as-nossas-visitas/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/pt/descobre-as-nossas-visitas/the-perfect-match/",
+                    "url": "/pt/descobre-as-nossas-visitas/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Reuniões e Eventos",
-                "url": "/pt/reunioes-e-eventos/",
+                "url": "/pt/reunioes-e-eventos/index.htm",
                 "children": [
                   {
                     "title": "Descobre os nossos espaços",
-                    "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/"
+                    "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/index.htm"
                   },
                   {
                     "title": "Os nossos serviços",
-                    "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/"
+                    "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/index.htm"
                   },
                   {
                     "title": "Contacta-nos",
-                    "url": "/pt/reunioes-e-eventos/contacta-nos/"
+                    "url": "/pt/reunioes-e-eventos/contacta-nos/index.htm"
                   }
                 ]
               },
               {
                 "title": "Serviço e contacto",
-                "url": "/pt/servico-e-contacto/"
+                "url": "/pt/servico-e-contacto/index.htm"
               },
               {
                 "title": "Cartão de oferta",
-                "url": "/pt/cart%C3%A3o-de-oferta/"
+                "url": "/pt/cart%C3%A3o-de-oferta/index.htm"
               },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/pt/heineken-store-pt/"
+                "url": "/pt/heineken-store-pt/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "Sobre a Experiência",
-                  "url": "/pt/sobre-a-experiencia/",
+                  "url": "/pt/sobre-a-experiencia/index.htm",
                   "new": false
                 },
                 {
                   "title": "Descobre as nossas visitas",
-                  "url": "/pt/descobre-as-nossas-visitas/",
+                  "url": "/pt/descobre-as-nossas-visitas/index.htm",
                   "new": false
                 },
                 {
                   "title": "Perguntas frequentes",
-                  "url": "/pt/perguntas-frequentes/",
+                  "url": "/pt/perguntas-frequentes/index.htm",
                   "new": false
                 },
                 {
                   "title": "Serviço e contacto",
-                  "url": "/pt/servico-e-contacto/",
+                  "url": "/pt/servico-e-contacto/index.htm",
                   "new": false
                 },
                 {
                   "title": "Crianças e menores de idade",
-                  "url": "/pt/crian%C3%A7as-e-menores-de-idade/",
+                  "url": "/pt/crian%C3%A7as-e-menores-de-idade/index.htm",
                   "new": false
                 },
                 {
                   "title": "Reagendamento e reembolso",
-                  "url": "/pt/reagendamento-e-reembolso/",
+                  "url": "/pt/reagendamento-e-reembolso/index.htm",
                   "new": false
                 },
                 {
                   "title": "Cartão de oferta",
-                  "url": "/pt/cart%C3%A3o-de-oferta/",
+                  "url": "/pt/cart%C3%A3o-de-oferta/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/pt/heineken-store-pt/",
+                  "url": "/pt/heineken-store-pt/index.htm",
                   "new": false
                 }
               ],
               "event": [
-                {
-                  "title": "Reuniões e Eventos",
-                  "url": "/pt/reunioes-e-eventos/",
-                  "new": false
-                },
-                {
-                  "title": "Descobre os nossos espaços",
-                  "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/",
-                  "new": false
-                },
-                {
-                  "title": "Os nossos serviços",
-                  "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/",
-                  "new": false
-                }
+              {
+                "title": "Reuniões e Eventos",
+                "url": "/pt/reunioes-e-eventos/index.htm",
+                "new": false
+              },
+              {
+                "title": "Descobre os nossos espaços",
+                "url": "/pt/reunioes-e-eventos/descobre-os-nossos-espa%C3%A7os/index.htm",
+                "new": false
+              },
+              {
+                "title": "Os nossos serviços",
+                "url": "/pt/reunioes-e-eventos/os-nossos-servi%C3%A7os/index.htm",
+                "new": false
+              }
               ],
               "secondary": [
-                {
-                  "title": "Cookie Settings",
-                  "url": "#cookie-settings",
-                  "new": false
-                },
-                {
-                  "title": "Política de Privacidade",
-                  "url": "/pt/politica-de-privacidade/",
-                  "new": false
-                },
-                {
-                  "title": "Política de Cookies",
-                  "url": "/pt/politica-de-cookies/",
-                  "new": false
-                },
-                {
-                  "title": "Termos e Condições",
-                  "url": "/pt/termos-e-condicoes/",
-                  "new": false
-                },
-                {
-                  "title": "Perguntas frequentes",
-                  "url": "/pt/perguntas-frequentes/",
-                  "new": false
-                },
-                {
-                  "title": "Heineken Experience Visitor House Rules",
-                  "url": "/pt/house-rules-pt/",
-                  "new": false
-                }
+              {
+                "title": "Cookie Settings",
+                "url": "#cookie-settings",
+                "new": false
+              },
+              {
+                "title": "Política de Privacidade",
+                "url": "/pt/politica-de-privacidade/index.htm",
+                "new": false
+              },
+              {
+                "title": "Política de Cookies",
+                "url": "/pt/politica-de-cookies/index.htm",
+                "new": false
+              },
+              {
+                "title": "Termos e Condições",
+                "url": "/pt/termos-e-condicoes/index.htm",
+                "new": false
+              },
+              {
+                "title": "Perguntas frequentes",
+                "url": "/pt/perguntas-frequentes/index.htm",
+                "new": false
+              },
+              {
+                "title": "Heineken Experience Visitor House Rules",
+                "url": "/pt/house-rules-pt/index.htm",
+                "new": false
+              }
               ],
               "facebook_url": "https://www.facebook.com/heinekenexperience/",
               "instagram_url": "https://www.instagram.com/heinekenexperience/"
